[Refactor] BaseAuditingEntity 및 AuditTime 도입을 통한 시간 관리 일관화 (#102)
* refactor: BaseAuditingEntity 및 AuditTime 도입을 통한 시간 관리 일관화

- infra-storage 모듈에 BaseAuditingEntity 추가 및 전체 JPA Entity 적용
- core-domain 모듈에 생성/수정 시간 관리를 위한 AuditTime VO 도입
- JPA Entity 생성자 캡슐화 및 createFromModel 정적 팩토리 메서드 적용
- 변경된 Entity/VO 구조에 맞춰 Domain Model, RepositoryImpl 및 QueryDSL 매핑 업데이트

* refactor: BaseAuditingEntity 및 AuditTime 도입을 통한 시간 관리 일관화

- infra-storage 모듈에 BaseAuditingEntity 추가 및 전체 JPA Entity 적용
- core-domain 모듈에 생성/수정 시간 관리를 위한 AuditTime VO 도입
- JPA Entity 생성자 캡슐화 및 createFromModel 정적 팩토리 메서드 적용
- 변경된 Entity/VO 구조에 맞춰 Domain Model, RepositoryImpl 및 QueryDSL 매핑 업데이트